--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -118,9 +118,8 @@ archives:
       - internal
       - pkg
       - src
-      - test/**/*
-      - third_party/**/*
-      - til.Csharp
+      - test/*
+      - third_party/*
 
 checksum:
   # You can change the name of the checksums file.
