--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -65,7 +65,7 @@ archives:
 
     # ID of this archive.
     # Defaults to `default`.
-    id: trice-archive
+    #id: trice-archive
 
     # Builds reference which build instances should be archived in this archive.
     #builds:
@@ -83,13 +83,15 @@ archives:
     #  386: i386
     #  amd64: x86_64
     #NEW:
-    name_template: >-
-      {{ .ProjectName }}_
-      {{- title .Os }}_
-      {{- if eq .Arch "amd64" }}x86_64
-      {{- else if eq .Arch "386" }}i386
-      {{- else }}{{ .Arch }}{{ end }}
-
+    #name_template: >-
+    # {{ .ProjectName }}_
+    # {{- title .Os }}_
+    # {{- if eq .Arch "amd64" }}x86_64
+    # {{- else if eq .Arch "386" }}i386
+    # {{- else }}{{ .Arch }}
+    # {{ end }}
+    # name_template: "{{ .Binary }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+    name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ .Arm }}"
 
 
 
