--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,19 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "TCPJL",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/trice",
+            "env": {},
+            "args": ["log",
+                     "-p", "TCP4",
+                     "-args", "localhost:19021",
+                     "-idlist", "${workspaceFolder}/test/testdata/til.json",
+            ]
+        },
+        {
             "name": "ver -logfile auto",
             "type": "go",
             "request": "launch",
