--- a/test/MDK-ARM_STM32F030R8_instrumented/MDK-ARM/MDK-ARM_STM32F030R8.uvprojx
+++ b/test/MDK-ARM_STM32F030R8_instrumented/MDK-ARM/MDK-ARM_STM32F030R8.uvprojx
@@ -10,8 +10,9 @@
       <TargetName>MDK-ARM_STM32F030R8</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>6190000::V6.19::ARMCLANG</pCCUsed>
-      <uAC6>1</uAC6>
+      <pArmCC>5060960::V5.06 update 7 (build 960)::.\ARMCC</pArmCC>
+      <pCCUsed>5060960::V5.06 update 7 (build 960)::.\ARMCC</pCCUsed>
+      <uAC6>0</uAC6>
       <TargetOption>
         <TargetCommonOption>
           <Device>STM32F030R8Tx</Device>
@@ -186,7 +187,6 @@
             <RvdsVP>0</RvdsVP>
             <RvdsMve>0</RvdsMve>
             <RvdsCdeCp>0</RvdsCdeCp>
-            <nBranchProt>0</nBranchProt>
             <hadIRAM2>0</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
@@ -314,8 +314,8 @@
           </ArmAdsMisc>
           <Cads>
             <interw>1</interw>
-            <Optim>5</Optim>
-            <oTime>1</oTime>
+            <Optim>2</Optim>
+            <oTime>0</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>0</OneElfS>
             <Strict>0</Strict>
@@ -323,7 +323,7 @@
             <PlainCh>0</PlainCh>
             <Ropi>0</Ropi>
             <Rwpi>0</Rwpi>
-            <wLevel>3</wLevel>
+            <wLevel>2</wLevel>
             <uThumb>0</uThumb>
             <uSurpInc>0</uSurpInc>
             <uC99>1</uC99>
@@ -440,11 +440,6 @@
               <FilePath>..\..\..\src\triceDoubleBuffer.c</FilePath>
             </File>
             <File>
-              <FileName>triceAuxiolary.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\src\triceAuxiolary.c</FilePath>
-            </File>
-            <File>
               <FileName>trice64.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\src\trice64.c</FilePath>
@@ -493,6 +488,11 @@
               <FileName>cobsDecode.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\src\cobsDecode.c</FilePath>
+            </File>
+            <File>
+              <FileName>triceAuxiliary.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\src\triceAuxiliary.c</FilePath>
             </File>
           </Files>
         </Group>
