--- a/test/vsCode_Nucleo-L432KC_generated/Makefile
+++ b/test/vsCode_Nucleo-L432KC_generated/Makefile
@@ -101,11 +101,30 @@ C_INCLUDES =  \
 
 include flags.mak
 
-clang: $(CLANG_BUILD)/$(TARGET).elf $(CLANG_BUILD)/$(TARGET).hex $(CLANG_BUILD)/$(TARGET).bin 
+.PHONY: all gcc clean
+.SECONDARY: main-build
+
+all: pre-build main-build
+
+pre-build:
+	@#echo PRE ...
+	@#echo PRE ... done
+	@#echo -e
+
+post-build:
+	@#echo POST ...
+	@#echo POST ... done
+	@#echo -e
+
+main-build: clang
+
+clang: $(CLANG_BUILD)/$(TARGET).elf $(CLANG_BUILD)/$(TARGET).hex $(CLANG_BUILD)/$(TARGET).bin
+	@$(MAKE) --no-print-directory post-build
 
 gcc:     $(GCC_BUILD)/$(TARGET).elf   $(GCC_BUILD)/$(TARGET).hex   $(GCC_BUILD)/$(TARGET).bin
+	@$(MAKE) --no-print-directory post-build
 
-all:      gcc clang
+#all:      gcc clang
 #	@ls -l build/*.o
 #	@ls -l build/$(TARGET).*
 #	@ls -l $(GCC_OBJECTS) 
@@ -120,7 +139,7 @@ include gcc1.mak
 include clang1.mak
 
 clean:
-	-rm -fR $(GCC_BUILD) $(CLANG_BUILD) 
+	@-rm -fR $(GCC_BUILD) $(CLANG_BUILD) 
   
 # openocdflashgcc: all
 # 	openocd -f interface/jlink.cfg -f target/stm32g0x.cfg -c "program $(GCC_BUILD)/$(TARGET).elf verify reset exit"
