--- a/test/vsCode_Nucleo-L432KC_instrumented/Makefile
+++ b/test/vsCode_Nucleo-L432KC_instrumented/Makefile
@@ -128,11 +128,16 @@ include flags.mak
 all: pre-build main-build
 
 pre-build:
+	@#echo PRE ...
+	@rm -f li.json
 	@trice u -src ../../src -src ./
-	@echo -e
+	@#echo PRE ... done
+	@#echo -e
 
 post-build:
-	@echo -e
+	@#echo POST ...
+	@#echo POST ... done
+	@#echo -e
 
 main-build: clang
 
@@ -157,7 +162,7 @@ include gcc1.mak
 include clang1.mak
 
 clean:
-	-rm -fR $(GCC_BUILD) $(CLANG_BUILD) 
+	@-rm -fR $(GCC_BUILD) $(CLANG_BUILD) 
   
 # openocdflashgcc: all
 # 	openocd -f interface/jlink.cfg -f target/stm32g0x.cfg -c "program $(GCC_BUILD)/$(TARGET).elf verify reset exit"
