--- a/examples/vsCode_Nucleo-G0B1_generated/Makefile
+++ b/examples/vsCode_Nucleo-G0B1_generated/Makefile
@@ -1,7 +1,9 @@
 
 
-# LLVM for ARM needs to be first in path
-export PATH := C:\bin\ArmClang\bin:C:\bin\ArmGNUToolchain\bin:$(PATH)
+# Put ARM Clang first in path temporary to avoid compiler variants issues.
+export PATH := C:\bin\ArmClang\bin:$(PATH)
+
+# ARM Clang uses the ARM GNU toolchain libraries and finds them over C_INCLUDE_PATH.
 export C_INCLUDE_PATH := C:\bin\ArmGNUToolchain\arm-none-eabi\include
 
 
