Minimal CLang adaptions project added.

--- a/examples/Nucleo-STM32L432KC_adapted_toClang/Makefile
+++ b/examples/Nucleo-STM32L432KC_adapted_toClang/Makefile
@@ -52,8 +52,6 @@ ASM_SOURCES =  \
 startup_stm32l432xx.s
 
 
-include clang0.mak
-
 #######################################
 # binaries
 #######################################
@@ -150,9 +148,6 @@ LDFLAGS = $(MCU) -specs=nano.specs -T$(LDSCRIPT) $(LIBDIR) $(LIBS) -Wl,-Map=$(BU
 # default action: build all
 all: $(BUILD_DIR)/$(TARGET).elf $(BUILD_DIR)/$(TARGET).hex $(BUILD_DIR)/$(TARGET).bin
 
-include clang1.mak mcu.mak flags.mak
-
-.PHONY: all qqq clean
 
 #######################################
 # build the application
@@ -187,8 +182,10 @@ $(BUILD_DIR):
 # clean up
 #######################################
 clean:
-	@-rm -fR $(BUILD_DIR)
-  
+	@-rm -fR $(BUILD_DIR) ./build.clang/
+
+include clang.mak # Run "make clang" to use the CLang compiler.
+
 #######################################
 # dependencies
 #######################################
