Adapted to Debian

--- a/examples/vsCode_Nucleo-G0B1_instrumented/Makefile
+++ b/examples/vsCode_Nucleo-G0B1_instrumented/Makefile
@@ -1,10 +1,11 @@
 
 
 # Put ARM Clang first in path temporary to avoid compiler variants issues.
-export PATH := C:\bin\ArmClang\bin:$(PATH)
+#export PATH := C:\bin\ArmClang\bin:$(PATH)
 
 # ARM Clang uses the ARM GNU toolchain libraries and finds them over C_INCLUDE_PATH.
-export C_INCLUDE_PATH := C:\bin\ArmGNUToolchain\arm-none-eabi\include
+#export C_INCLUDE_PATH := C:\bin\ArmGNUToolchain\arm-none-eabi\include
+export C_INCLUDE_PATH := /usr/include/newlib/
 
 MAKEFILE = Makefile mcu.mak flags.mak gcc0.mak gcc1.mak clang0.mak clang1.mak
 VERBOSE = # -v
@@ -175,8 +176,8 @@ clean:
 version:
 	@which arm-none-eabi-gcc
 	@arm-none-eabi-gcc --version
-	@which clang
-	@clang --version
+	@which $(CLANG_CC)
+	@$(CLANG_CC) --version
  
 # openocdflashgcc: all
 # 	openocd -f interface/jlink.cfg -f target/stm32g0x.cfg -c "program $(GCC_BUILD)/$(TARGET).elf verify reset exit"
