--- a/examples/vsCode_Nucleo-G0B1_instrumented/Makefile
+++ b/examples/vsCode_Nucleo-G0B1_instrumented/Makefile
@@ -1,11 +1,11 @@
 
 
 # Put ARM Clang first in path temporary to avoid compiler variants issues.
-#export PATH := C:\bin\ArmClang\bin:$(PATH)
+export PATH := C:\bin\ArmClang\bin:C:\bin\ArmGNUToolchain\bin:$(PATH)
 
 # ARM Clang uses the ARM GNU toolchain libraries and finds them over C_INCLUDE_PATH.
-#export C_INCLUDE_PATH := C:\bin\ArmGNUToolchain\arm-none-eabi\include
-export C_INCLUDE_PATH := /usr/include/newlib/
+export C_INCLUDE_PATH := C:\bin\ArmGNUToolchain\arm-none-eabi\include
+#export C_INCLUDE_PATH := /usr/include/newlib/
 
 MAKEFILE = Makefile mcu.mak flags.mak gcc0.mak gcc1.mak clang0.mak clang1.mak
 VERBOSE = # -v
@@ -134,15 +134,15 @@ include flags.mak
 all: pre-build main-build
 
 pre-build:
-	@#echo PRE ...
+	@echo "PRE ..."
 	@trice insert -src ../../src -src ./ -src ../exampleData
-	@#echo PRE ... done
-	@#echo -e
+	@echo "PRE ... done"
+	@make -j8 all
 
 post-build:
-	@#echo POST ...
+	@echo POST ...
 	@trice clean -src ../../src -src ./ -src ../exampleData
-	@#echo POST ... done
+	@echo POST ... done
 	@#echo -e
 
 main-build: clang
@@ -170,7 +170,7 @@ log:
 include gcc1.mak
 include clang1.mak
 
-clean:
+clean: post-build
 	@-rm -fR $(GCC_BUILD) $(CLANG_BUILD)
 	
 version:
