--- a/examples/L432KC_gen_ad_toClang/Makefile
+++ b/examples/L432KC_gen_ad_toClang/Makefile
@@ -145,8 +145,13 @@ LIBS = -lc -lm -lnosys
 LIBDIR = 
 LDFLAGS = $(MCU) -specs=nano.specs -T$(LDSCRIPT) $(LIBDIR) $(LIBS) -Wl,-Map=$(BUILD_DIR)/$(TARGET).map,--cref -Wl,--gc-sections
 
+
+.PHONY: all gcc clean
+.SECONDARY: main-build
+
 # default action: build all
 all: $(BUILD_DIR)/$(TARGET).elf $(BUILD_DIR)/$(TARGET).hex $(BUILD_DIR)/$(TARGET).bin
+	@:
 
 
 #######################################
